fix: svg alignment for remotes

--- a/frontend/src/style/_remotes.scss
+++ b/frontend/src/style/_remotes.scss
@@ -72,8 +72,6 @@
 
     svg {
       margin: 0 0.2rem 0 -0.25rem;
-      position: relative;
-      top: 0.25rem;
     }
   }
 }
